updating stable urls, and commenting it1 and st1 urls

--- a/Environment/src/main/resources/st1.properties
+++ b/Environment/src/main/resources/st1.properties
@@ -1,14 +1,13 @@
+#domain.prop=st1app.loftkeys.com
 
-domain.prop=st1app.loftkeys.com
+#borrower.url=https://st1app.loftkeys.com/borrower
+#underwriter.url=https://st1app.loftkeys.com/underwriter
+#partner.url=https://st1app.loftkeys.com/partner
 
-borrower.url=https://st1app.loftkeys.com/borrower
-underwriter.url=https://st1app.loftkeys.com/underwriter
-partner.url=https://st1app.loftkeys.com/partner
+#apollo.client.url=https://st1apl.loftkeys.com/client
+#apollo.payment.url=https://st1apl.loftkeys.com/payment
+#apollo.auth.url=https://st1apl.loftkeys.com/auth
 
-apollo.client.url=https://st1apl.loftkeys.com/client
-apollo.payment.url=https://st1apl.loftkeys.com/payment
-apollo.auth.url=https://st1apl.loftkeys.com/auth
+#crm.url=https://st1crm.loftkeys.com
 
-crm.url=https://st1crm.loftkeys.com
-
-database.instance=jdbc:oracle:thin:@ST0000D
+#database.instance=jdbc:oracle:thin:@ST0000D
