--- a/Environment/src/main/resources/stable.properties
+++ b/Environment/src/main/resources/stable.properties
@@ -1,14 +1,15 @@
 
-domain.prop=appdev1.loftkeys.com
+domain.prop=dv2app.opoqodev.com
 
-borrower.url=https://appdev1.loftkeys.com/stable-borrower
-underwriter.url=https://appdev1.loftkeys.com/stable-underwriter
-partner.url=https://appdev1.loftkeys.com/stable-partner
+borrower.url=https://dv2app.opoqodev.com/stable-borrower
+underwriter.url=https://dv2app.opoqodev.com/stable-underwriter
+partner.url=https://dv2app.opoqodev.com/stable-partner
 
-apollo.client.url=https://apollo-stable.loftkeys.com/client-stable/
-apollo.payment.url=https://apollo-stable.loftkeys.com/payment-stable/
+apollo.client.url=https://dv2apl.opoqodev.com/client
+apollo.payment.url=https://dv2apl.opoqodev.com/payment
+apollo.administration.url=https://dv2apl.opoqodev.com/administration
 apollo.auth.url=https://apollo-stable.loftkeys.com/auth-stable
 
-crm.url=https://crm.loftkeys.com
+crm.url=https://dv2crm.opoqodev.com/
 
-database.instance=jdbc:oracle:thin:@DV0002
+database.instance=jdbc:oracle:thin:@DV2000.LEVERIS
