--- a/Environment/src/main/resources/it1.properties
+++ b/Environment/src/main/resources/it1.properties
@@ -1,11 +1,11 @@
-borrower.url=https://it1app.loftkeys.com/borrower
-underwriter.url=https://it1app.loftkeys.com/underwriter
-partner.url=https://it1app.loftkeys.com/partner
+#borrower.url=https://it1app.loftkeys.com/borrower
+#underwriter.url=https://it1app.loftkeys.com/underwriter
+#partner.url=https://it1app.loftkeys.com/partner
 
-apollo.client.url=https://it1apl.loftkeys.com/client
-apollo.payment.url=https://it1apl.loftkeys.com/payment
-apollo.auth.url=https://it1apl.loftkeys.com/auth
+#apollo.client.url=https://it1apl.loftkeys.com/client
+#apollo.payment.url=https://it1apl.loftkeys.com/payment
+#apollo.auth.url=https://it1apl.loftkeys.com/auth
 
-crm.url=https://it1crm.loftkeys.com
+#crm.url=https://it1crm.loftkeys.com
 
-database.instance=jdbc:oracle:thin:@IT0000
+#database.instance=jdbc:oracle:thin:@IT0000
