--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -149,26 +149,26 @@
 
     <dependencies>
 
-        <!--<dependency>-->
-            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
-            <!--<artifactId>Environment</artifactId>-->
-            <!--<version>${com-r2development-leveris-qa.utils.environment.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
-            <!--<artifactId>AcmExcel</artifactId>-->
-            <!--<version>${com-r2development-leveris-qa.utils.acmexcel.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
-            <!--<artifactId>OraSql</artifactId>-->
-            <!--<version>${com-r2development-leveris-qa.utils.orasql.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
-            <!--<artifactId>DataValidator</artifactId>-->
-            <!--<version>${com-r2development-leveris-qa.data-validator.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.r2development.leveris.qa.utils</groupId>
+            <artifactId>Environment</artifactId>
+            <version>${com-r2development-leveris-qa.utils.environment.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.r2development.leveris.qa.utils</groupId>
+            <artifactId>AcmExcel</artifactId>
+            <version>${com-r2development-leveris-qa.utils.acmexcel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.r2development.leveris.qa.utils</groupId>
+            <artifactId>OraSql</artifactId>
+            <version>${com-r2development-leveris-qa.utils.orasql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.r2development.leveris.qa.utils</groupId>
+            <artifactId>DataValidator</artifactId>
+            <version>${com-r2development-leveris-qa.data-validator.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.r2development.leveris.qa</groupId>
             <artifactId>Borrower</artifactId>
