--- a/Apollo/pom.xml
+++ b/Apollo/pom.xml
@@ -97,7 +97,7 @@
                 <version>1.5</version>
                 <configuration>
                     <resourceBundles>
-                        <resourceBundle>com.r2development.leveris.qa.utils:Environment:${com-r2development-leveris-qa.utils.environment.version}</resourceBundle>
+                        <resourceBundle>com.r2development.leveris.qa.utils:Environment:${com-r2development-leveris-qa-utils.environment.version}</resourceBundle>
                     </resourceBundles>
                 </configuration>
                 <executions>
@@ -161,26 +161,26 @@
     <dependencies>
 
         <!-- Module Dependencies -->
-        <dependency>
-            <groupId>com.r2development.leveris.qa.utils</groupId>
-            <artifactId>Environment</artifactId>
-            <version>${com-r2development-leveris-qa.utils.environment.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
+            <!--<artifactId>Environment</artifactId>-->
+            <!--<version>${com-r2development-leveris-qa-utils.environment.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.r2development.leveris.qa.utils</groupId>
             <artifactId>AcmExcel</artifactId>
-            <version>${com-r2development-leveris-qa.utils.acmexcel.version}</version>
+            <version>${com-r2development-leveris-qa-utils.acmexcel.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.r2development.leveris.qa.utils</groupId>
-            <artifactId>OraSql</artifactId>
-            <version>${com-r2development-leveris-qa.utils.orasql.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.r2development.leveris.qa.utils</groupId>
-            <artifactId>DataValidator</artifactId>
-            <version>${com-r2development-leveris-qa.data-validator.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
+            <!--<artifactId>OraSql</artifactId>-->
+            <!--<version>${com-r2development-leveris-qa-utils.orasql.version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.r2development.leveris.qa.utils</groupId>-->
+            <!--<artifactId>DataValidator</artifactId>-->
+            <!--<version>${com-r2development-leveris-qa.data-validator.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.r2development.leveris.qa</groupId>
             <artifactId>Borrower</artifactId>
