--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
 
     <properties>
         <com-r2development-leveris-qa.autleveris.version>1.0-SNAPSHOT</com-r2development-leveris-qa.autleveris.version>
-        <com-r2development-leveris-qa.utils.orasql.version>1.0-SNAPSHOT</com-r2development-leveris-qa.utils.orasql.version>
-        <com-r2development-leveris-qa.utils.acmexcel.version>1.0-SNAPSHOT</com-r2development-leveris-qa.utils.acmexcel.version>
+        <com-r2development-leveris-qa-utils.environment.version>1.0-SNAPSHOT</com-r2development-leveris-qa-utils.environment.version>
+        <com-r2development-leveris-qa-utils.orasql.version>1.0-SNAPSHOT</com-r2development-leveris-qa-utils.orasql.version>
+        <com-r2development-leveris-qa-utils.acmexcel.version>1.0-SNAPSHOT</com-r2development-leveris-qa-utils.acmexcel.version>
         <com-r2development-leveris-qa.data-validator.version>1.0-SNAPSHOT</com-r2development-leveris-qa.data-validator.version>
         <com-r2development-leveris-qa.borrower.version>1.0-SNAPSHOT</com-r2development-leveris-qa.borrower.version>
         <com-r2development-leveris-qa.underwriter.version>1.0-SNAPSHOT</com-r2development-leveris-qa.underwriter.version>
         <com-r2development-leveris-qa.apollo.version>1.0-SNAPSHOT</com-r2development-leveris-qa.apollo.version>
-        <com-r2development-leveris-qa.utils.environment.version>1.0-SNAPSHOT</com-r2development-leveris-qa.utils.environment.version>
 
         <environment>st1</environment>
         <domain>loftkeys.com</domain>
@@ -93,17 +93,17 @@
             <dependency>
                 <groupId>com.r2development.leveris.qa.utils</groupId>
                 <artifactId>Environment</artifactId>
-                <version>${com-leveris-qa.utils.environment.version}</version>
+                <version>${com-r2development-leveris-qa-utils.environment.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.r2development.leveris.qa.utils</groupId>
                 <artifactId>DataValidator</artifactId>
-                <version>${com-leveris-qa.data-validator.version}</version>
+                <version>${com-r2development-leveris-qa.data-validator.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.r2development.leveris.qa</groupId>
                 <artifactId>Borrower</artifactId>
-                <version>${com-leveris-qa.borrower.version}</version>
+                <version>${com-r2development-leveris-qa.borrower.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.r2development.leveris.qa</groupId>
@@ -120,12 +120,12 @@
             <dependency>
                 <groupId>com.r2development.leveris.qa.utils</groupId>
                 <artifactId>AcmExcel</artifactId>
-                <version>${com-r2development-leveris-qa.utils.acmexcel.version}</version>
+                <version>${com-r2development-leveris-qa-utils.acmexcel.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.r2development.leveris.qa.utils</groupId>
                 <artifactId>OraSql</artifactId>
-                <version>${com-r2development-leveris-qa.utils.orasql.version}</version>
+                <version>${com-r2development-leveris-qa-utils.orasql.version}</version>
             </dependency>
 
             <!--===========-->
