--- a/Environment/src/main/resources/stable.properties
+++ b/Environment/src/main/resources/stable.properties
@@ -1,7 +1,7 @@
 
 domain.prop=dv2app.opoqodev.com
 
-borrower.url=https://dv2app.opoqodev.com/stable-borrower
+borrower.url=http://dv2app.opoqodev.com/stable-borrower
 underwriter.url=https://dv2app.opoqodev.com/stable-underwriter
 partner.url=https://dv2app.opoqodev.com/stable-partner
 
