--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -19,7 +19,7 @@
         <borrower>http://dv2app.opoqodev.com/stable-borrower</borrower>
         <underwriter>http://dv2app.opoqodev.com/underwriter</underwriter>
         <partner>http://dv2app.opoqodev.com/partner</partner>
-        <database>jdbc:oracle:thin:@DV20000D</database>
+        <database>jdbc:oracle:thin:@DV2000.LEVERIS</database>
         <automation.mode>dev</automation.mode>
         <active.screenshot>false</active.screenshot>
         <browser>chrome</browser>
@@ -27,7 +27,6 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyyMMddHHmmssSSS</maven.build.timestamp.format>
     </properties>
-
 
     <repositories>
         <repository>
@@ -179,16 +178,16 @@
         </dependency>
 
         <!-- Testing -->
-        <!--<dependency>-->
-            <!--<groupId>org.seleniumhq.selenium</groupId>-->
-            <!--<artifactId>selenium-java</artifactId>-->
-            <!--<version>${org-seleniumhq-selenium.selenium-java.version}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server-standalone</artifactId>
-            <version>2.43.1</version>
+            <artifactId>selenium-java</artifactId>
+            <version>${org-seleniumhq-selenium.selenium-java.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.seleniumhq.selenium</groupId>-->
+            <!--<artifactId>selenium-server-standalone</artifactId>-->
+            <!--<version>2.43.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -694,6 +693,52 @@
                                     <projectName>cucumber-jvm-example</projectName>
                                     <outputDirectory>${project.build.directory}/SmokeTest-Cucumber-Reports</outputDirectory>
                                     <cucumberOutput>${project.build.directory}/SmokeTest-Cucumber-Json</cucumberOutput>
+                                    <enableFlashCharts>true</enableFlashCharts>
+                                    <skippedFails>false</skippedFails>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>PaydayLoanBorrower</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <testFailureIgnore>false</testFailureIgnore>
+                            <includes>
+                                <include>**/PaydayLoanBorrowerTest.class</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>net.masterthought</groupId>
+                        <artifactId>maven-cucumber-reporting</artifactId>
+                        <version>0.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>execution</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <projectName>cucumber-jvm-example</projectName>
+                                    <outputDirectory>${project.build.directory}/Gui/GuiPaydayLoanBorrower-Cucumber-Reports</outputDirectory>
+                                    <cucumberOutput>${project.build.directory}/Gui/GuiPaydayLoanBorrower-Json/GuiPaydayLoanBorrower.json</cucumberOutput>
                                     <enableFlashCharts>true</enableFlashCharts>
                                     <skippedFails>false</skippedFails>
                                 </configuration>
