--- a/Underwriter/pom.xml
+++ b/Underwriter/pom.xml
@@ -14,8 +14,9 @@
     <packaging>jar</packaging>
 
     <properties>
-        <environment>st1</environment>
-        <underwriter>https://st1apl.loftkeys.com/underwriter</underwriter>
+        <environment>dev2</environment>
+        <domain>dv2app.opoqodev.com</domain>
+        <underwriter>http://dv2app.opoqodev.com/stable-borrower</underwriter>
         <automation.mode>dev</automation.mode>
         <active.screenshot>false</active.screenshot>
         <browser>chrome</browser>
