--- a/Investor/pom.xml
+++ b/Investor/pom.xml
@@ -248,6 +248,18 @@
             <version>${com-google-inject.guice.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-logging-juli</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
