update sso logout context

--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -1,6 +1,6 @@
 domain.prop=dv2app.opoqodev.com/
 
-borrower.url=http://dv2app.opoqodev.com/stable-borrower/
+borrower.url=http://dv2app.opoqodev.com/stable-borrower
 underwriter.url=http://dv2app.opoqodev.com/underwriter
 partner.url=http://dv2app.opoqodev.com/partner
 
