fixing borrower.url and instanceDB

--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -10,4 +10,4 @@ apollo.auth.url=http://dv2app.opoqodev.com/auth
 
 crm.url=https://dv2crm.loftkeys.com
 
-database.instance=jdbc:oracle:thin:@DV0000D
+database.instance=jdbc:oracle:thin:@DV2000.LEVERIS
