Fix Login Update Scenario Happy Path Borrower due Fix Login Update Scenario Borrower Login

--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -257,6 +257,17 @@
             <version>${com-oracle.ojdbc7.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-logging-juli</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
