--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,17 @@
                 <version>${org-jsoup.jsoup.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-websocket</artifactId>
+                <version>8.0.32</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-logging-juli</artifactId>
+                <version>8.0.32</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
