--- a/Environment/src/main/resources/stable.properties
+++ b/Environment/src/main/resources/stable.properties
@@ -4,6 +4,7 @@ domain.prop=dv2app.opoqodev.com
 borrower.url=http://dv2app.opoqodev.com/stable-borrower
 underwriter.url=https://dv2app.opoqodev.com/stable-underwriter
 partner.url=https://dv2app.opoqodev.com/stable-partner
+automaticRegistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
 
 apollo.client.url=https://dv2apl.opoqodev.com/client
 apollo.payment.url=https://dv2apl.opoqodev.com/payment
