Description : ViliamS code sync with Tonny attempt 2.

--- a/Environment/src/main/resources/st1.properties
+++ b/Environment/src/main/resources/st1.properties
@@ -3,6 +3,8 @@ domain.prop=st1app.loftkeys.com
 borrower.url=https://st1app.loftkeys.com/borrower
 underwriter.url=https://st1app.loftkeys.com/underwriter
 partner.url=https://st1app.loftkeys.com/partner
+autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
+
 
 apollo.client.url=https://st1apl.loftkeys.com/client
 apollo.payment.url=https://st1apl.loftkeys.com/payment
