--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -3,6 +3,7 @@ domain.prop=dv2app.opoqodev.com/
 borrower.url=http://dv2app.opoqodev.com/stable-borrower/
 underwriter.url=http://dv2app.opoqodev.com/underwriter
 partner.url=http://dv2app.opoqodev.com/partner
+autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
 
 apollo.client.url=http://dv2app.opoqodev.com/client
 apollo.payment.url=http://dv2app.opoqodev.com/payment
