--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -1,14 +1,19 @@
 domain.prop=dv2app.opoqodev.com/
 
 borrower.url=http://dv2app.opoqodev.com/stable-borrower
-underwriter.url=http://dv2app.opoqodev.com/underwriter
+underwriter.url=http://dv2app.opoqodev.com/stable-underwriter
 partner.url=http://dv2app.opoqodev.com/partner
 autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
+investor.url=https://dv2pub.opoqodev.com
 
-apollo.client.url=http://dv2app.opoqodev.com/client
-apollo.payment.url=http://dv2app.opoqodev.com/payment
+domain.apollo=http://dv2apl.opoqodev.com
+apollo.client.url=https://dv2apl.opoqodev.com/client
+apollo.ctx.client=/client
+apollo.payment.url=https://dv2apl.opoqodev.com/payment
+apollo.ctx.payment=/payment
 apollo.auth.url=http://dv2app.opoqodev.com/auth
+apollo.sso.url=https://dv2apl.opoqodev.com/sso
 
-crm.url=https://dv2crm.loftkeys.com
+crm.url=https://dv1crm.opoqodev.com/
 
 database.instance=jdbc:oracle:thin:@DV2000.LEVERIS
