--- a/pom.xml
+++ b/pom.xml
@@ -161,8 +161,8 @@
             <!--</dependency>-->
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-server-standalone</artifactId>
-                <version>2.43.1</version>
+                <artifactId>selenium-server</artifactId>
+                <version>2.53.0</version>
             </dependency>
             <!--<dependency>-->
                 <!--<groupId>org.seleniumhq.selenium</groupId>-->
