--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -294,6 +294,11 @@
             <artifactId>phantomjsdriver</artifactId>
             <version>1.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.1</version>
+        </dependency>
 
     </dependencies>
 
