--- a/Testing/pom.xml
+++ b/Testing/pom.xml
@@ -128,7 +128,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>2.19.1</version>
                 <configuration>
                     <systemPropertyVariables>
                         <environment>${environment}</environment>
@@ -159,6 +159,13 @@
                         <!--suppress MavenModelInspection -->
                         <domain.apollo>${domain.apollo}</domain.apollo>
                     </systemPropertyVariables>
+                    <!--<parallel>classes</parallel>-->
+                    <!--<threadCountClasses>10</threadCountClasses>-->
+                    <!--<threadCountSuites>4</threadCountSuites>-->
+                    <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
+                    <!--<forkCount>5</forkCount>-->
+                    <!--<reuseForks>false</reuseForks>-->
+                    <!--<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>-->
                 </configuration>
             </plugin>
 
