--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,13 @@
                 <!--<scope>test</scope>-->
             <!--</dependency>-->
 
+            <!--<dependency>-->
+                <!--<groupId>com.github.temyers</groupId>-->
+                <!--<artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
+                <!--<version>0.1.0</version>-->
+            <!--</dependency>-->
+
+
         </dependencies>
     </dependencyManagement>
 
