--- a/pom.xml
+++ b/pom.xml
@@ -154,21 +154,21 @@
             <!--===========-->
 
             <!-- GUI Testing -->
-            <!--<dependency>-->
-                <!--<groupId>org.seleniumhq.selenium</groupId>-->
-                <!--<artifactId>selenium-java</artifactId>-->
-                <!--<version>${org-seleniumhq-selenium.selenium-java.version}</version>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${org-seleniumhq-selenium.selenium-java.version}</version>
+            </dependency>
             <!--<dependency>-->
                 <!--<groupId>org.seleniumhq.selenium</groupId>-->
                 <!--<artifactId>selenium-server</artifactId>-->
                 <!--<version>2.53.0</version>-->
             <!--</dependency>-->
-            <dependency>
-                <groupId>org.seleniumhq.selenium</groupId>
-                <artifactId>selenium-server-standalone</artifactId>
-                <version>2.53.0</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.seleniumhq.selenium</groupId>-->
+                <!--<artifactId>selenium-server-standalone</artifactId>-->
+                <!--<version>2.43.1</version>-->
+            <!--</dependency>-->
 
             <!-- Cucumber -->
             <dependency>
