--- a/Borrower/pom.xml
+++ b/Borrower/pom.xml
@@ -178,13 +178,11 @@
             <artifactId>DataValidator</artifactId>
             <version>${com-r2development-leveris-qa.data-validator.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.github.detro.ghostdriver</groupId>
             <artifactId>phantomjsdriver</artifactId>
-            <version>1.1.0</version>
+            <version>RELEASE</version>
         </dependency>
-
         <!-- Testing -->
         <!--<dependency>-->
             <!--<groupId>org.seleniumhq.selenium</groupId>-->
@@ -193,8 +191,8 @@
         <!--</dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-server-standalone</artifactId>
-            <version>2.43.1</version>
+            <artifactId>selenium-server</artifactId>
+            <version>2.53.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -273,7 +271,11 @@
             <artifactId>tomcat-embed-logging-juli</artifactId>
             <version>8.0.32</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>2.53.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
