Description : Underwriter new coverage initial commit. Apollo User Administration new coverage commit. Not tested yet.... having issue with SharedDriver initialization before start of execution.... need to investigate.

--- a/Environment/src/main/resources/dev1.properties
+++ b/Environment/src/main/resources/dev1.properties
@@ -5,6 +5,8 @@ underwriter.url=http://dv1app.opoqodev.com/intdev-underwriter
 partner.url=http://dv1app.opoqodev.com/intdev-partner
 autoregistration.url=http://dv1app.opoqodev.com/intdev-borrower/home?useCase=automaticregistration
 investor.url=http://dv1pub.opoqodev.com/
+administration.url=http://dv1apl.opoqodev.com/administration
+admin.password=changemenow!
 
 apollo.client.url=https://dv1apl.opoqodev.com/client
 apollo.ctx.client=/client
