--- a/Environment/src/main/resources/dev2.properties
+++ b/Environment/src/main/resources/dev2.properties
@@ -5,6 +5,8 @@ underwriter.url=http://dv2app.opoqodev.com/stable-underwriter
 partner.url=http://dv2app.opoqodev.com/partner
 autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
 investor.url=https://dv2pub.opoqodev.com
+administration.url=http://dv2apl.opoqodev.com/administration
+admin.password=changemenow!
 
 domain.apollo=http://dv2apl.opoqodev.com
 apollo.client.url=https://dv2apl.opoqodev.com/client
