--- a/Environment/src/main/resources/stable.properties
+++ b/Environment/src/main/resources/stable.properties
@@ -5,10 +5,11 @@ borrower.url=http://dv2app.opoqodev.com/stable-borrower
 underwriter.url=https://dv2app.opoqodev.com/stable-underwriter
 partner.url=https://dv2app.opoqodev.com/stable-partner
 automaticRegistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
+administration.url=http://dv2apl.opoqodev.com/administration
+admin.password=changemenow!
 
 apollo.client.url=https://dv2apl.opoqodev.com/client
 apollo.payment.url=https://dv2apl.opoqodev.com/payment
-apollo.administration.url=https://dv2apl.opoqodev.com/administration
 apollo.auth.url=https://apollo-stable.loftkeys.com/auth-stable
 
 crm.url=https://dv2crm.opoqodev.com/
