--- a/Apollo/pom.xml
+++ b/Apollo/pom.xml
@@ -192,10 +192,15 @@
         </dependency>
 
         <!-- Testing -->
+        <!--<dependency>-->
+            <!--<groupId>org.seleniumhq.selenium</groupId>-->
+            <!--<artifactId>selenium-java</artifactId>-->
+            <!--<version>${org-seleniumhq-selenium.selenium-java.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${org-seleniumhq-selenium.selenium-java.version}</version>
+            <artifactId>selenium-server</artifactId>
+            <version>2.53.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
