--- a/Environment/src/main/resources/st1.properties
+++ b/Environment/src/main/resources/st1.properties
@@ -3,8 +3,9 @@ domain.prop=st1app.loftkeys.com
 borrower.url=https://st1app.loftkeys.com/borrower
 underwriter.url=https://st1app.loftkeys.com/underwriter
 partner.url=https://st1app.loftkeys.com/partner
-autoregistration.url=http://dv2app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
-
+autoregistration.url=http://st1app.opoqodev.com/stable-borrower/home?useCase=automaticregistration
+administration.url=http://st1apl.opoqodev.com/administration
+admin.password=changemenow!
 
 apollo.client.url=https://st1apl.loftkeys.com/client
 apollo.payment.url=https://st1apl.loftkeys.com/payment
