--- a/Apollo/src/main/resources/cucumber-guice.properties
+++ b/Apollo/src/main/resources/cucumber-guice.properties
@@ -1,1 +1,1 @@
-guiceModule=com.r2development.leveris.di.ApolloDependenciesModule
+guiceModule=com.r2development.leveris.di.ApolloDependenciesModule.java
